--- a/fleet/letsencrypt/fleet.yaml
+++ b/fleet/letsencrypt/fleet.yaml
@@ -8,7 +8,7 @@ helm:
   # TODO: replace your@own.email with your email address
   values:
     registration:
-      emailAddress: your@own.email
+      emailAddress: shamsul.zulkifli@suse.com
 dependsOn:
   - selector:
       matchLabels:
