--- a/fleet/salesportal/fleet.yaml
+++ b/fleet/salesportal/fleet.yaml
@@ -24,13 +24,13 @@ targetCustomizations:
     helm:
       values:
         front:
-          host: sales-portal.W.X.Y.Z.sslip.io
+          host: sales-portal.13.215.178.25.sslip.io
           tag: 1.0.4768413825
         adapter:
-          host: crm-adapter.W.X.Y.Z.sslip.io
+          host: crm-adapter.13.215.178.25.sslip.io
           tag: 1.0.4768413825
         data:
-          host: crm-data.W.X.Y.Z.sslip.io
+          host: crm-data.13.215.178.25.sslip.io
           tag: 1.0.4768413825
           db:
             connectionString: mongodb://root:admin@devpro-salesportal-mongodb:27017/sales-portal?authSource=admin
