--- a/fleet/neuvector/fleet.yaml
+++ b/fleet/neuvector/fleet.yaml
@@ -30,5 +30,5 @@ targetCustomizations:
             enabled: true
           manager:
             ingress:
-              host: neuvector.W.X.Y.Z.sslip.io
+              host: neuvector.18.156.197.223.sslip.io
     clusterName: demo
