--- a/fleet/cow-demo/fleet.yaml
+++ b/fleet/cow-demo/fleet.yaml
@@ -17,8 +17,8 @@ targetCustomizations:
     # TODO: update W.X.Y.Z to your external IP address (look at Ingress Controller)
     helm:
       values:
-        replicaCount: 1
+        replicaCount: 2
         host: cow-demo-ingress.default.54.251.133.47.nip.io
         cow:
-          color: blue
+          color: red
     clusterName: k8s-dc-cyberjaya
